--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: development
+  username: MB # replace this with your own user name
+  password: password # replace this with your own password
+  host: localhost
+  encoding: UTF8
   pool: 5
   timeout: 5000
 
